// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> 자식 컴포넌트가 들어온 경우 그려준다 1`] = `
.c0 {
  color: #424242;
  font-family: Spoqa Han Sans,Helvetica Neue,Nanum Gothic;
  font-size: 0.875rem;
}

<span
  className="c0"
  color="gray.90"
  fontSize={14}
>
  test
</span>
`;

exports[`<Text /> 정상적으로 렌더링된다 1`] = `
.c0 {
  color: #424242;
  font-family: Spoqa Han Sans,Helvetica Neue,Nanum Gothic;
  font-size: 0.875rem;
}

<span
  className="c0"
  color="gray.90"
  fontSize={14}
/>
`;
